added Order Line Delete Summary
added Order Line Delete Summary

--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -187,7 +187,7 @@
           
             <ng-template   let-item="item">
        
-                <GridLayout  columns="170,*" rows="*,*,*,*,*" style="padding:20;width: 100%;font-size: 20px;">
+                <GridLayout  columns="170,*" rows="*,*,*,*,*,*" style="padding:20;width: 100%;font-size: 20px;">
             <Label class="cell" row="0" col="0" text="Line Number:"></Label>
               <Label class="cell" row="0" col="1"  [text]="item.LineNumber"></Label>
         
@@ -206,7 +206,8 @@
               <Label class="cell"   row="4" col="0"  text="Currency:"></Label>
               <Label class="cell"  row="4" col="1"   textWrap="true" [text]="item.Currency"></Label>
 
-              
+              <Button  row="6" col="0" colspan = "2"  class="btn btn-primary btn-ruby btn-active "  text="Delete Line" (tap)="deleteOrderLine(item.LineNumber)"></Button>
+
 
               
            </GridLayout>
