--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -64,12 +64,6 @@
       hint = "Select Item code"
       ></DropDown>
         
-
-     
-           
-   
-        
-         
         </StackLayout> 
      <StackLayout  >
      <GridLayout   rows="auto,auto" columns="auto,*">
@@ -265,6 +259,9 @@
 
         <Label class="cell"   text="Total Vat:"></Label>
         <Label class="cell"   [text]="TotalVat"></Label>
+
+        <Label class="cell"   text="Total Add Charges:"></Label>
+        <Label class="cell"   [text]="TotalAddCharges"></Label>                
         
         <Label class="cell"   text="Total Price:"></Label>
         <Label class="cell"   [text]="TotalPrice"></Label>        
