--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -4,12 +4,12 @@
     <Label class="action-bar-title" text="Sales Order Entry"></Label>
 </ActionBar>-->
 
-<ActionBar class="action-bar" title="test" style="color: white; background-color: grey;">
+<ActionBar class="action-bar" title="test" style="color: white; background-color: darkgray;">
     <StackLayout orientation="horizontal"
       ios:horizontalAlignment="center"
       android:horizontalAlignment="center">
       <Image src="~/images/SyscomIcon.png" width="20" height="20" class="action-image" ></Image>
-      <Label text=" Sales Order Entry " class="action-bar-title"></Label> 
+      <Label text=" Sales Order Entry " class="action-bar-title" style="background-color:darkgray"></Label> 
       <Image src="~/images/castlelogo.png" width="20" height="20" class="action-image" ></Image>
     </StackLayout>
   </ActionBar>
