--- a/src/app/browse/browse.component.html
+++ b/src/app/browse/browse.component.html
@@ -1,10 +1,10 @@
-<!--<ActionBar class="action-bar">
+<ActionBar class="action-bar">
     <Image class="img-circle m-b-10 Syscom-Plc-logo-small" src="~/images/Syscom-Plc-logo.jpg" width="150"  loadMode="async"> </Image>
 
     <Label class="action-bar-title" text="Sales Order Entry"></Label>
-</ActionBar>-->
+</ActionBar>
 
-<ActionBar class="action-bar" title="test" style="color: white; background-color: darkgray;">
+<!--<ActionBar class="action-bar" title="test" style="color: white; background-color: darkgray;">
     <StackLayout orientation="horizontal"
       ios:horizontalAlignment="center"
       android:horizontalAlignment="center">
@@ -12,7 +12,7 @@
       <Label text=" Sales Order Entry " class="action-bar-title" style="background-color:darkgray"></Label> 
       <Image src="~/images/castlelogo.png" width="20" height="20" class="action-image" ></Image>
     </StackLayout>
-  </ActionBar>
+  </ActionBar>-->
 
 <StackLayout class="form" sdkExampleTitle sdkToggleNavButton>
     <StackLayout class="page page-content">
